<resources>
    <string name="app_name">Vocabulary Trainer</string>

    <string name="show_words_string">Show Words</string>
    <string name="add_new_word_string">Add new word</string>

    <!-- Word Creator Strings -->
    <string name="enter_word_string">Enter a word</string>
    <string name="enter_translation_string">Enter translation</string>
    <string name="submit_string">Submit</string>
    <string name="nothing_submit_toast">Nothing to submit</string>
    <string name="word_created_toast">Word created!</string>

    <!-- Delete Word Dialog Strings -->
    <string name="dialog_delete_word_string">Delete this word?</string>
    <string name="delete_string">Delete</string>
    <string name="cancel_string">Cancel</string>

    <string name="view_words_string">View Words</string>
    <string name="check_string">Check</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>

    <string name="vocabulary_trainer_string">Trainer</string>
    <string name="vocabulary_list_string">My Words</string>
    <string name="word_creator_string">Creating</string>
</resources>
